# z80tonops

./: Makefile  Readme.mkd  test.sh
src/: CMakeLists.txt  main.cpp  test.cpp  utils.h  z802nops.cpp  z802nops.h
tests/: test1.asm
